--- a/bootstrap-3.3.7/less/general.less
+++ b/bootstrap-3.3.7/less/general.less
@@ -12,7 +12,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .off-center {
-	// pull headings up to fit the vertical rhytm
+	// pull the things up to fit the vertical rhytm
 	position: relative;
 	top: -25px;
+}
+
+.off-center-small {
+	position: relative;
+	top: 10px;
 }
